--- a/src/style.css
+++ b/src/style.css
@@ -231,22 +231,6 @@ keypad > grid > button:focus, .text-only-button:focus {
   border: 0;
 }
 
-phosh-lockscreen phosh-media-player {
-  background: none;
-  border: solid 1px;
-  border-color: rgb(51,51,51);
-  border-radius: 0;
-}
-
-phosh-lockscreen phosh-media-player button {
-  background: rgba(255, 255, 255, 0.3);
-  border: none;
-}
-
-phosh-lockscreen phosh-media-player button:not(:hover):not(:active) {
-  background: none;
-}
-
 /*
  * System modal dialogs (polkit, gcr)
  */
@@ -334,22 +318,26 @@ phosh-notification-banner {
 /*
  * Media player
  */
-phosh-media-player {
-  background: rgb(51,51,51);
-  border-radius: 5%;
-  padding: 9px;
+.phosh-media-player {
+ min-height: 92px;
+ padding: 12px;
+}
+
+.phosh-media-player button {
+  border-radius: 9999px;
+  -gtk-outline-radius: 9999px;
+  background-origin: padding-box, border-box;
+  background-clip: padding-box, border-box;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 16px;
   border: 0;
-  box-shadow: 0 0;
-}
-
-phosh-media-player > button {
-  border-radius: 0;
   box-shadow: none;
-  outline-style: none;
+  background: 0;
+  min-width: 16px;
+  min-height: 16px;
 }
 
-/* The details button should not look inactive even when disabled */
-phosh-media-player box *:disabled {
-  color: white;
-  -gtk-icon-effect: none;
+.phosh-media-player button:hover {
+  background: rgba(255, 255, 255, 0.1);
 }
