--- a/src/ui/lockscreen.ui
+++ b/src/ui/lockscreen.ui
@@ -74,21 +74,31 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="maximum_size">350</property>
-                <property name="margin_bottom">100</property>
+                <property name="margin_top">50</property>
+                <property name="margin_bottom">50</property>
                 <property name="vexpand">True</property>
                 <property name="valign">center</property>
                 <child>
-                  <object class="PhoshMediaPlayer" id="media_player">
-                    <property name="visible" bind-source="media_player" bind-property="playable" bind-flags="sync-create"/>
-                    <property name="valign">center</property>
-                    <property name="can_focus">False</property>
-                    <signal name="player-raised" handler="show_unlock_page" object="PhoshLockscreen" swapped="yes"/>
+                  <object class="GtkListBox">
+                    <property name="visible">True</property>
+                    <property name="selection-mode">none</property>
+                    <property name="can_focus">True</property>
+                    <child>
+                      <object class="PhoshMediaPlayer" id="media_player">
+                        <signal name="player-raised" handler="show_unlock_page" object="PhoshLockscreen" swapped="yes"/>
+                        <property name="visible" bind-source="media_player" bind-property="playable" bind-flags="sync-create"/>
+
+                      </object>
+                    </child>
+                    <style>
+                      <class name="content"/>
+                    </style>
                   </object>
                 </child>
               </object>
               <packing>
-                <property name="position">1</property>
-                <property name="pack_type">start</property>
+                <property name="position">2</property>
+                <property name="pack_type">end</property>
               </packing>
             </child>
             <child type="center">
@@ -160,178 +170,178 @@
                         <property name="visible" bind-source="wifiinfo" bind-property="enabled" bind-flags="sync-create"/>
                         <property name="can_focus">False</property>
                         <property name="valign">start</property>
-                        <property name="halign">end</property>
-                        <property name="hexpand">False</property>
-                        <property name="icon-size">GTK_ICON_SIZE_LARGE_TOOLBAR</property>
-                        <property name="margin_left">6</property>
-                        <property name="margin_right">6</property>
-                        <property name="no_show_all">True</property>
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">False</property>
-                        <property name="position">1</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="PhoshBtInfo" id="btinfo">
-                        <property name="visible" bind-source="btinfo" bind-property="enabled" bind-flags="sync-create"/>
-                        <property name="can_focus">False</property>
-                        <property name="valign">start</property>
-                        <property name="halign">end</property>
-                        <property name="hexpand">False</property>
-                        <property name="margin_left">6</property>
-                        <property name="margin_right">6</property>
-                        <property name="icon-size">GTK_ICON_SIZE_LARGE_TOOLBAR</property>
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">False</property>
-                        <property name="position">2</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="PhoshBatteryInfo" id="batteryinfo">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="valign">start</property>
-                        <property name="halign">end</property>
-                        <property name="hexpand">False</property>
-                        <property name="icon-size">GTK_ICON_SIZE_LARGE_TOOLBAR</property>
-                        <property name="margin_left">6</property>
-                        <property name="margin_right">6</property>
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">False</property>
-                        <property name="position">3</property>
-                      </packing>
-                    </child>
-                  </object>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">True</property>
-                    <property name="position">2</property>
-                  </packing>
-                </child>
-              </object>
-            </child>
-          </object>
-        </child>
-        <child>
-          <object class="GtkBox" id="box_unlock">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="orientation">vertical</property>
-            <property name="halign">center</property>
-            <property name="valign">center</property>
-            <property name="spacing">12</property>
-            <property name="margin_top">100</property>
-            <child>
-              <object class="GtkLabel" id="lbl_unlock_status">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Enter Passcode</property>
-                <attributes>
-                  <attribute name="font-desc" value="Cantarell 16"/>
-                </attributes>
-              </object>
-            </child>
-            <child>
-              <object class="GtkEntry" id="entry_pin">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="has-frame">False</property>
-                <property name="margin_top">12</property>
-                <property name="margin_bottom">12</property>
-                <property name="visibility">False</property>
-                <property name="xalign">0.5</property>
-                <property name="input-purpose">GTK_INPUT_PURPOSE_PIN</property>
-                <property name="buffer">pin_buffer</property>
-                <style>
-                  <class name="phosh-lockscreen-pin"/>
-                </style>
-                <signal name="changed" handler="input_changed_cb" swapped="yes"/>
-              </object>
-            </child>
-            <child>
-              <object class="HdyKeypad" id="keypad">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="halign">center</property>
-                <property name="valign">center</property>
-                <property name="margin_top">12</property>
-                <property name="margin_bottom">12</property>
-                <property name="symbols_visible">False</property>
-                <property name="letters_visible">False</property>
-                <property name="entry">entry_pin</property>
-                <property name="end-action">delete_btn</property>
-              </object>
-            </child>
-            <child>
-              <object class="GtkBox">
-                <property name="visible">True</property>
-                <property name="margin_start">16</property>
-                <property name="margin_end">16</property>
-                <property name="halign">center</property>
-                <child>
-                  <object class="GtkButton" id="btn_emergency">
-                    <property name="visible">False</property>
-                    <property name="label" translatable="yes">Emergency</property>
-                    <style>
-                      <class name="text-only-button"/>
-                      <class name="circular"/>
-                    </style>
-                  </object>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">True</property>
-                    <property name="pack_type">start</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkButton" id="btn_submit">
-                    <property name="visible">True</property>
-                    <property name="sensitive">False</property>
-                    <property name="label" translatable="yes">Unlock</property>
-                    <signal name="clicked" handler="submit_cb" swapped="yes"/>
-                    <style>
-                      <class name="text-only-button"/>
-                      <class name="circular"/>
-                    </style>
-                  </object>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">True</property>
-                    <property name="pack_type">end</property>
-                  </packing>
-                </child>
-              </object>>
-            </child>
-          </object>
-        </child>
-        <style>
-          <class name="phosh-lockscreen"/>
-        </style>
-      </object>
-    </child>
-  </template>
-  <object class="GtkButton" id="delete_btn">
-    <property name="visible">True</property>
-    <property name="can_focus">True</property>
-    <property name="focus-on-click">False</property>
-    <signal name="clicked" handler="delete_button_clicked_cb" object="PhoshLockscreen" swapped="true"/>
-    <child>
-      <object class="GtkImage">
-        <property name="visible">True</property>
-        <property name="icon-name">edit-clear-symbolic</property>
-      </object>
-    </child>
-  </object>
-  <object class="GtkGestureLongPress" id="long_press_del_gesture">
-    <property name="widget">delete_btn</property>
-    <signal name="pressed" handler="long_press_del_cb" object="PhoshLockscreen" swapped="true"/>
-  </object>
-  <object class="GcrSecureEntryBuffer" id="pin_buffer">
-  </object>
-</interface>
+                            <property name="halign">end</property>
+                            <property name="hexpand">False</property>
+                            <property name="icon-size">GTK_ICON_SIZE_LARGE_TOOLBAR</property>
+                            <property name="margin_left">6</property>
+                            <property name="margin_right">6</property>
+                            <property name="no_show_all">True</property>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">False</property>
+                          <property name="position">1</property>
+                        </packing>
+                      </child>
+                      <child>
+                        <object class="PhoshBtInfo" id="btinfo">
+                          <property name="visible" bind-source="btinfo" bind-property="enabled" bind-flags="sync-create"/>
+                          <property name="can_focus">False</property>
+                          <property name="valign">start</property>
+                          <property name="halign">end</property>
+                          <property name="hexpand">False</property>
+                          <property name="margin_left">6</property>
+                          <property name="margin_right">6</property>
+                          <property name="icon-size">GTK_ICON_SIZE_LARGE_TOOLBAR</property>
+                        </object>
+                        <packing>
+                          <property name="expand">False</property>
+                          <property name="fill">False</property>
+                          <property name="position">2</property>
+                        </packing>
+                      </child>
+                      <child>
+                        <object class="PhoshBatteryInfo" id="batteryinfo">
+                          <property name="visible">True</property>
+                          <property name="can_focus">False</property>
+                          <property name="valign">start</property>
+                          <property name="halign">end</property>
+                          <property name="hexpand">False</property>
+                          <property name="icon-size">GTK_ICON_SIZE_LARGE_TOOLBAR</property>
+                          <property name="margin_left">6</property>
+                          <property name="margin_right">6</property>
+                        </object>
+                        <packing>
+                          <property name="expand">False</property>
+                          <property name="fill">False</property>
+                          <property name="position">3</property>
+                        </packing>
+                      </child>
+                    </object>
+                    <packing>
+                      <property name="expand">False</property>
+                      <property name="fill">True</property>
+                      <property name="position">2</property>
+                    </packing>
+                  </child>
+                </object>
+              </child>
+            </object>
+          </child>
+          <child>
+            <object class="GtkBox" id="box_unlock">
+              <property name="visible">True</property>
+              <property name="can_focus">False</property>
+              <property name="orientation">vertical</property>
+              <property name="halign">center</property>
+              <property name="valign">center</property>
+              <property name="spacing">12</property>
+              <property name="margin_top">100</property>
+              <child>
+                <object class="GtkLabel" id="lbl_unlock_status">
+                  <property name="visible">True</property>
+                  <property name="can_focus">False</property>
+                  <property name="label" translatable="yes">Enter Passcode</property>
+                  <attributes>
+                    <attribute name="font-desc" value="Cantarell 16"/>
+                  </attributes>
+                </object>
+              </child>
+              <child>
+                <object class="GtkEntry" id="entry_pin">
+                  <property name="visible">True</property>
+                  <property name="can_focus">False</property>
+                  <property name="has-frame">False</property>
+                  <property name="margin_top">12</property>
+                  <property name="margin_bottom">12</property>
+                  <property name="visibility">False</property>
+                  <property name="xalign">0.5</property>
+                  <property name="input-purpose">GTK_INPUT_PURPOSE_PIN</property>
+                  <property name="buffer">pin_buffer</property>
+                  <style>
+                    <class name="phosh-lockscreen-pin"/>
+                  </style>
+                  <signal name="changed" handler="input_changed_cb" swapped="yes"/>
+                </object>
+              </child>
+              <child>
+                <object class="HdyKeypad" id="keypad">
+                  <property name="visible">True</property>
+                  <property name="can_focus">False</property>
+                  <property name="halign">center</property>
+                  <property name="valign">center</property>
+                  <property name="margin_top">12</property>
+                  <property name="margin_bottom">12</property>
+                  <property name="symbols_visible">False</property>
+                  <property name="letters_visible">False</property>
+                  <property name="entry">entry_pin</property>
+                  <property name="end-action">delete_btn</property>
+                </object>
+              </child>
+              <child>
+                <object class="GtkBox">
+                  <property name="visible">True</property>
+                  <property name="margin_start">16</property>
+                  <property name="margin_end">16</property>
+                  <property name="halign">center</property>
+                  <child>
+                    <object class="GtkButton" id="btn_emergency">
+                      <property name="visible">False</property>
+                      <property name="label" translatable="yes">Emergency</property>
+                      <style>
+                        <class name="text-only-button"/>
+                        <class name="circular"/>
+                      </style>
+                    </object>
+                    <packing>
+                      <property name="expand">False</property>
+                      <property name="fill">True</property>
+                      <property name="pack_type">start</property>
+                    </packing>
+                  </child>
+                  <child>
+                    <object class="GtkButton" id="btn_submit">
+                      <property name="visible">True</property>
+                      <property name="sensitive">False</property>
+                      <property name="label" translatable="yes">Unlock</property>
+                      <signal name="clicked" handler="submit_cb" swapped="yes"/>
+                      <style>
+                        <class name="text-only-button"/>
+                        <class name="circular"/>
+                      </style>
+                    </object>
+                    <packing>
+                      <property name="expand">False</property>
+                      <property name="fill">True</property>
+                      <property name="pack_type">end</property>
+                    </packing>
+                  </child>
+                </object>>
+              </child>
+            </object>
+          </child>
+          <style>
+            <class name="phosh-lockscreen"/>
+          </style>
+        </object>
+      </child>
+    </template>
+    <object class="GtkButton" id="delete_btn">
+      <property name="visible">True</property>
+      <property name="can_focus">True</property>
+      <property name="focus-on-click">False</property>
+      <signal name="clicked" handler="delete_button_clicked_cb" object="PhoshLockscreen" swapped="true"/>
+      <child>
+        <object class="GtkImage">
+          <property name="visible">True</property>
+          <property name="icon-name">edit-clear-symbolic</property>
+        </object>
+      </child>
+    </object>
+    <object class="GtkGestureLongPress" id="long_press_del_gesture">
+      <property name="widget">delete_btn</property>
+      <signal name="pressed" handler="long_press_del_cb" object="PhoshLockscreen" swapped="true"/>
+    </object>
+    <object class="GcrSecureEntryBuffer" id="pin_buffer">
+    </object>
+  </interface>
