--- a/src/ui/settings-menu.ui
+++ b/src/ui/settings-menu.ui
@@ -166,6 +166,22 @@
               </packing>
             </child>
             <child>
+              <object class="GtkListBox">
+                <property name="visible">True</property>
+                <property name="selection-mode">none</property>
+                <property name="can_focus">True</property>
+                <child>
+                  <object class="PhoshMediaPlayer" id="media_player">
+                    <signal name="player-raised" handler="on_media_player_raised" object="PhoshSettings" swapped="yes"/>
+
+                  </object>
+                </child>
+                <style>
+                  <class name="content"/>
+                </style>
+              </object>
+            </child>
+            <child>
               <object class="GtkScrolledWindow" id="sw_notifications">
                 <property name="visible">False</property>
                 <property name="vscrollbar-policy">automatic</property>
@@ -183,14 +199,6 @@
                 </style>
               </object>
             </child>
-	    <child>
-              <object class="PhoshMediaPlayer" id="media_player">
-                <property name="visible" bind-source="media_player" bind-property="playable" bind-flags="sync-create"/>
-                <property name="valign">center</property>
-                <property name="can_focus">False</property>
-		<signal name="player-raised" handler="on_media_player_raised" object="PhoshSettings" swapped="yes"/>
-	      </object>
-	    </child>
           </object>
         </child>
       </object>
